Fix Quick Sort layout issue on mobile

--- a/src/components/app/App.css
+++ b/src/components/app/App.css
@@ -195,6 +195,7 @@ button:hover {
 @media screen and (max-width: 575px) {
   .sort-section {
     height: 22.5%;
+    margin-top: 7.5%;
   }
   .sort-box, .label-box {
     font-size: 10px;
@@ -210,7 +211,7 @@ button:hover {
 @media screen and (max-width: 400px) {
   .sort-section {
     height: 17.5%;
-  }z
+  }
   .sort-box, .label-box {
     font-size: 8px;
   }
